# CAMPAREE

./: .gitignore  Dockerfile  GRCh38_gencode_v46_primary_assembly.config.yaml  README.md  config.yaml  create_config.py  main.sh  pool_start_task.sh  pyproject.toml  readthedocs.yml  requirements.txt  requirements_docs.txt  setup.py
.github/workflows/: deploy-image.yaml  update-version-create-tag.yaml  update-workflow-snapshot.yaml  validate-docker-image-version.yaml
camparee/: allelic_imbalance_quant.py  annotation_info.py  beagle.py  bowtie2.py  camparee_constants.py  camparee_controller.py  camparee_utils.py  expression_pipeline.py  gene_files_preparation.py  genome_builder.py  intron_quant.py  kallisto.py  molecule_maker.py  transcript_gene_quant.py  transcriptome_fasta_preparation.py  variants_compilation.py
camparee/config/: baby.config.yaml  template.config.yaml
camparee/resources/baby_genome.mm10/: baby_genome.mm10.annotation.gtf
config/: baby.config.yaml  template.config.yaml
doc/: api.rst  camparee_output.rst  conf.py  index.rst  installing_camparee.rst  introduction.rst  quick_start.rst  requirements.txt  resource_files.rst  running_camparee.rst
doc/_build/doctrees/: api.doctree  index.doctree  installation.doctree  introduction.doctree  quick_start.doctree  reST_guide.doctree
doc/_build/text/: api.txt  index.txt  installation.txt  introduction.txt  quick_start.txt
