[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]


[project]
name = "CAMPAREE"
version = "0.4.2"
description = "Configurable And Modular Program Allowing RNA Expression Emulation"
requires-python = ">=3.11"
dependencies = [
    "beers_utils @ git+https://github.com/itmat/BEERS_UTILS@52e1a00057d2939651ab587a4ad1a6873dc8d49e",
    "numpy==1.24.2",
    "roman==4.0",
    "pysam==0.20.0",
    "pandas==1.5.3",
    "termcolor==2.2.0",
    "prettytable==3.6.0",
    "PyYAML==6.0",
]

[tool.setuptools]
packages = ["camparee"]
package-data.camparee = [
    "third_party_software/**",
    "resources/**",
    "bin/**",
    "test_data/**",
    "config/**",
]

[project.scripts]
camparee = "camparee.bin.run_camparee:main"
create_star_index_for_baby_genome = "camparee.bin.create_star_index_for_baby_genome:main"
molecule_file_to_fasta_and_count_table = "camparee.bin.molecule_file_to_fasta_and_count_table:main"
create_camparee_test_files = "camparee.bin.create_camparee_test_files:main"

[project.optional-dependencies]
dev = ["black", "pytest", "Sphinx~=6.2.1", "sphinx-rtd-theme", "mypy"]
